[package]
name = "turn-it-up"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
cookie = { version = "0.18.1", features = ["percent-encode"] }
httparse = "1.9.3"
netdev = "0.28.0"
scraper = "0.19.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.1"
urlencoding = "2.1.3"
