[package]
name = "turn-it-up"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
cookie = { version = "0.18.1", features = ["percent-encode"] }
futures = "0.3.30"
httparse = "1.9.3"
libp2p = { version = "0.53.2", features = ["tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic"] }
netdev = "0.28.0"
pnet = "0.35.0"
scraper = "0.19.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.1"
urlencoding = "2.1.3"
